# ai-cio-trading-ops

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml
config/: approval_routes.example.json  approval_routes.json
deploy/: com.openai.ai-cio-watchdog.plist.example  com.openai.ai-cio.plist.example
docs/: alpaca_paper.md  approval_automation.md  operator_runbook.md  robinhood_trading_tools.md  slack_required_tools.md  upstream_review.md
robinhood_tools/: __init__.py  accounting.py  adapters.py  alpaca_market_data.py  alpaca_paper.py  analysis.py  approvals.py  auth.py  cli.py  client.py  daily_controls.py  database.py  errors.py  governance.py  health.py  journal.py  learning.py  lifecycle.py  logging.py  market_calendar.py  mcp_backend.py  mcp_config.py  migrations.py  models.py  notifications.py  observability.py  operations.py  orchestrator.py  paper.py  paper_autonomy.py  policy.py  portfolio.py  privacy.py  reconciliation.py  replay.py  reporting.py  research.py  risk.py  runtime.py  safety.py  (+7 more)
scripts/: check_required_tools.py  dashboard.py  encrypted_backup.sh  health_check.py  install_watchdog.py  render_approval_message.py  restore_drill.py  secret_scan.py  standalone_watchdog.py  sync_ai_cio_skill.py  update_journal.py
skills/: README.md
tests/: test_alpaca_market_data.py  test_alpaca_paper.py  test_approval_workflow.py  test_cio_system.py  test_daily_improvements.py  test_governance_replay_recovery.py  test_mcp_backend.py  test_operations.py  test_orchestration_integration.py  test_paper_autonomy.py  test_production_hardening.py  (+7 more)
(+10 files in other folders)
