[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robinhood-trading-tools"
version = "0.1.0"
description = "Safety-gated Robinhood trading tool definitions and service layer."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest==9.0.3", "ruff==0.15.21", "mypy==1.19.1", "coverage==7.10.7", "pip-audit==2.10.1"]

[project.scripts]
cio = "robinhood_tools.cli:main"

[tool.setuptools]
packages = ["robinhood_tools"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["robinhood_tools"]

[tool.coverage.report]
fail_under = 75
